--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,13 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap"
     rel="stylesheet">
+
+  <link rel="shortcut icon" href="logos/favicon.ico" type="image/x-icon">
+  <link rel="icon" type="image/png" sizes="32x32" href="logos/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="logos/favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="logos/apple-touch-icon.png">
   <link rel="manifest" href="/manifest.json">
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Livro de receitas</title>
 </head>
